# ispp

./: CMakeLists.txt  README.md  conanfile.txt
src/: main.cpp  processor.cpp  processor.h
